# SP2025-Semester-Project

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  homepage2.html  kind-cluster.yaml  requirements.txt
backend/: .pdm-python  README.md  pyproject.toml
backend/src/: server.py
docker/: Dockerfile  Dockerfile.release
docker/frontend/: Dockerfile  nginx.conf
k8s/: README.md  deployment.yaml  pv.yaml  setup.ps1  setup.sh
ski-slopes/: package-lock.json  package.json
ski-slopes/src/app/: App.jsx
ski_slopes/: .gitignore  Dockerfile  Dockerfile.release  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
ski_slopes/public/assets/cardsinfo/: jacksonhole-map.avif
ski_slopes/public/assets/resorts/: resort.avif
ski_slopes/public/models/: jackson-hole.glb
ski_slopes/src/: App.tsx
ski_slopes/src/app/: App.tsx  index.css  layout.tsx  routes.tsx
ski_slopes/src/app/routes/: About.tsx  AuthCallback.tsx  Dashboard.tsx  Editor.tsx  JacksonHole.tsx  LandingPage.tsx  Login.tsx  MtBaker.tsx  Page.tsx  Render.tsx  (+4 more)
ski_slopes/src/components/: BackerObjects.tsx  Footer.tsx  JacksonObjects.tsx  Navbar.tsx  SnowEffect.tsx  TellurideObjects.tsx
ski_slopes/src/layouts/: LandingLayout.tsx
ski_slopes/src/lib/: Auth.ts  firebase.ts  supabase.ts
ski_slopes/src/store/: authStore.ts  favoriteStore.ts  weatherStore.ts
ski_slopes/supabase/: config.toml
supabase/migrations/: 00000000000000_create_favorites.sql  20240325_create_favorites.sql  20240325_create_favorites_table.sql  20240325_create_stored_procedure.sql
(+1 files in other folders)
