[project]
name = "backend"
version = "0.1.0"
description = "Backend for Ski Slopes application"
authors = [
    {name = "evan chee", email = "chee@wustl.edu"},
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "supabase>=2.3.0",
    "sqlalchemy>=2.0.27",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "rasterio>=1.4.3"
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
